<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="?attr/colorSurface"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="20dp"
    tools:ignore="Overdraw">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/supermarket_choose"
        android:textColor="?attr/colorPrimaryVariant"
        android:textSize="22sp" />

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:backgroundTint="?attr/colorSurface"
        android:elevation="4dp">

        <Spinner
            android:id="@+id/spinner_supermarkets"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </androidx.cardview.widget.CardView>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/section_choose"
        android:textColor="?attr/colorPrimaryVariant"
        android:textSize="22sp" />

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        android:backgroundTint="?attr/colorSurface"
        android:elevation="4dp">

        <Spinner
            android:id="@+id/spinner_sections"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </androidx.cardview.widget.CardView>

    <Button
        android:id="@+id/btn_add"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:backgroundTint="?attr/colorPrimaryVariant"
        android:text="@string/action_add"
        android:textColor="?attr/colorOnPrimary" />

</LinearLayout>