<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal|top"
    android:orientation="vertical"
    android:paddingHorizontal="10dp"
    android:paddingVertical="10dp"
    tools:context=".home.SettingsActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:background="?attr/colorSurface"
        android:elevation="4dp"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingHorizontal="10dp">

        <ImageButton
            android:id="@+id/btn_log_out"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:background="@null"
            android:scaleType="fitCenter"
            android:src="@drawable/ic_log_out"
            app:tint="?attr/colorSecondary"
            android:contentDescription="@string/auth_log_out" />

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:letterSpacing="0.02"
            android:paddingTop="45dp"
            android:text="@string/nav_settings"
            android:textColor="?attr/colorSecondary"
            android:textSize="40sp"
            android:textStyle="bold"
            tools:ignore="DuplicateIncludedIds" />

        <ImageButton
            android:id="@+id/btn_home"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:background="@null"
            android:scaleType="fitCenter"
            android:src="@drawable/ic_home"
            app:tint="?attr/colorSecondary"
            android:contentDescription="@string/nav_home" />

    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/auth_username"
        android:textColor="?attr/colorPrimaryVariant"
        android:textSize="28sp"
        android:textStyle="bold"
        android:labelFor="@+id/et_username" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="10dp"
        android:layout_marginBottom="15dp"
        android:gravity="end|center_vertical"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/et_username"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="15dp"
            android:layout_weight="1"
            android:autofillHints=""
            android:backgroundTint="?attr/colorPrimary"
            android:digits=" אבגדהוזחטיכלמנסעפצקרשתךםןףץ"
            android:inputType="text"
            android:maxLength="20"
            android:minWidth="100dp"
            android:singleLine="true"
            android:textColor="?attr/colorSecondary"
            android:textColorHighlight="?attr/colorPrimary"
            android:textCursorDrawable="@null"
            android:textSize="26sp" />

        <Button
            android:id="@+id/btn_change_username"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/action_change"
            android:textSize="20sp" />

    </LinearLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <include
                layout="@layout/cities_table"
                tools:ignore="DuplicateIncludedIds" />

            <include
                layout="@layout/supermarkets_table"
                tools:ignore="DuplicateIncludedIds" />

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

</LinearLayout>